# Finance

./: .dockerignore  .env.example  .flake8  .gitignore  Changelog.md  Dockerfile  README.md  api.py  config.ini  dev-requirements.txt  docker-compose.yml  financial_analyzer.py  main.py  portfolio_manager.py  pyproject.toml  requirements.txt  streamlit_app.py
portfolios/: Mladen.json
tests/: conftest.py  test_financial_analyzer.py
