[project]
name = "finance_project"
version = "0.1.0"
requires-python = ">=3.11,<3.14"
description = "Financial analysis project"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
dependencies = [
    "pandas>=1.0.0",
    "yfinance>=1.5.1",
    "configparser>=3.9.0",
    "tqdm>=4.62.0",
    "streamlit>=1.31.0",
    "plotly>=5.20.0",
    "requests>=2.31.0",
    "openpyxl>=3.1.0",
    "fastapi>=0.108.0",
    "uvicorn[standard]>=0.27.0",
]

[tool.poetry]
name = "finance_project"
version = "0.1.0"
description = "Financial analysis project"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "*"
yfinance = "*"
configparser = "*"
tqdm = "*"
streamlit = "*"
plotly = "*"
requests = "*"
openpyxl = "*"
fastapi = "*"
uvicorn = {extras = ["standard"]}

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

